--- a/css/styles.css
+++ b/css/styles.css
@@ -44,8 +44,11 @@ address {
   margin-right: auto;
 }
 :root {
-  --hover-color--: #404bbf;
-  --main-text-color--: #2e2f42;
+  --hover-color: #404bbf;
+  --main-text-color: #2e2f42;
+  --gradient: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7))
 }
 
 .footer-logo {
@@ -70,7 +73,7 @@ address {
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--main-text-color--);
+  color: var(--main-text-color);
 }
 .logo-web {
   font-family: "Raleway";
@@ -119,7 +122,7 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--main-text-color--);
+  color: var(--main-text-color);
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -129,7 +132,7 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--hover-color--);
+  color: var(--hover-color);
 }
 .header-adress {
   margin-left: auto;
@@ -148,7 +151,7 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--hover-color--);
+  color: var(--hover-color);
 }
 
 .contact-phone {
@@ -165,11 +168,8 @@ address {
   background: #2e2f42;
   padding-top: 192px;
   padding-bottom: 192px;
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(/images/hero-bg.jpeg);
+  background-image: var(--gradient),
+    url(../images/hero-bg.jpeg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -207,7 +207,7 @@ address {
 }
 .hero-btn:hover,
 .hero-btn:focus {
-  background: var(--hover-color--);
+  background: var(--hover-color);
 }
 
 /* STRENGTH */
@@ -240,7 +240,7 @@ address {
   font-size: 20px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--main-text-color--);
+  color: var(--main-text-color);
   padding-bottom: 8px;
 }
 .strenth-text {
@@ -303,7 +303,7 @@ address {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: var(--main-text-color--);
+  color: var(--main-text-color);
   margin-bottom: 72px;
 }
 .team-list {
@@ -357,7 +357,7 @@ address {
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.02em;
-  color: var(--main-text-color--);
+  color: var(--main-text-color);
 }
 .team-text {
   font-size: 16px;
@@ -514,7 +514,7 @@ address {
 
 .portfolio-btn:hover,
 .portfolio-btn:focus {
-  background: var(--hover-color--);
+  background: var(--hover-color);
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
@@ -578,7 +578,7 @@ address {
   font-size: 20px;
   line-height: calc(24 / 20);
   letter-spacing: 0.02em;
-  color: var(--main-text-color--);
+  color: var(--main-text-color);
 }
 
 .portfolio-subtitle {
