--- a/css/styles.css
+++ b/css/styles.css
@@ -46,9 +46,7 @@ address {
 :root {
   --hover-color: #404bbf;
   --main-text-color: #2e2f42;
-  --gradient: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7))
+  --gradient: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
 }
 
 .footer-logo {
@@ -168,8 +166,7 @@ address {
   background: #2e2f42;
   padding-top: 192px;
   padding-bottom: 192px;
-  background-image: var(--gradient),
-    url(../images/hero-bg.jpeg);
+  background-image: var(--gradient), url(../images/hero-bg.jpeg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -523,6 +520,8 @@ address {
   text-align: center;
   letter-spacing: 0.04em;
   color: #ffffff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-list {
   display: flex;
@@ -571,6 +570,12 @@ address {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
   position: relative;
 }
+
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .portfolio-img {
 }
 .porfolio-title {
