--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ address {
   --hover-color: #404bbf;
   --main-text-color: #2e2f42;
   --gradient: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
+  --transition-dur-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-logo {
@@ -127,15 +128,13 @@ address {
   color: var(--main-text-color);
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color var(--transition-dur-and-func);
 }
 .header-link:focus,
 .header-link:hover {
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
   color: var(--hover-color);
 }
+
 .header-adress {
   margin-left: auto;
 }
@@ -147,12 +146,11 @@ address {
   letter-spacing: 0.02em;
   color: #434455;
   padding-bottom: 24px;
+  transition: color var(--transition-dur-and-func);
 }
+
 .contact-email:hover,
 .contact-email:focus {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
   color: var(--hover-color);
 }
 
@@ -347,10 +345,11 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color var(--transition-dur-and-func);
 }
 
 .team-soc-link:is(:hover, :focus) {
-  background: var(--hover-color);
+  background-color: var(--hover-color);
 }
 
 .team-soc-icon {
@@ -404,10 +403,12 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: color var(--transition-dur-and-func);
 }
 
 .customer-icon {
   fill: #8e8f99;
+  transition: fill var(--transition-dur-and-func);
 }
 
 .customer-link:is(:hover, :focus) {
@@ -473,6 +474,7 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color var(--transition-dur-and-func);
 }
 
 .footer-soc-link:is(:hover, :focus) {
@@ -497,8 +499,6 @@ address {
   margin-bottom: 72px;
 }
 
-.portfolio-btn-item {
-}
 .portfolio-btn {
   font-weight: 600;
   font-size: 16px;
@@ -516,21 +516,17 @@ address {
   flex: none;
   order: 4;
   flex-grow: 0;
+  transition: color var(--transition-dur-and-func),
+    box-shadow var(--transition-dur-and-func),
+    background-color var(--transition-dur-and-func);
 }
 
 .portfolio-btn:hover,
 .portfolio-btn:focus {
-  background: var(--hover-color);
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 1.5;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.04em;
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  background-color: #4d5ae5;
 }
 .portfolio-list {
   display: flex;
@@ -545,9 +541,9 @@ address {
   overflow-y: hidden;
 }
 
-.portfolio-list-img-wrap:hover .overlay {
+.portfolio-item:hover .overlay {
   transform: translate(0, 0);
-  transition: 500ms;
+  transition: 250ms;
 }
 
 .overlay {
@@ -563,7 +559,7 @@ address {
   color: rgba(244, 244, 253, 1);
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: hidden;
   transform: translate(0, 100%);
 }
 
@@ -578,21 +574,12 @@ address {
   border: 0.5px solid #f4f4fd;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
   position: relative;
+  transition: box-shadow var(--transition-dur-and-func);
 }
 
 .portfolio-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-img {
-}
-.porfolio-title {
-  font-weight: 600;
-  font-size: 20px;
-  line-height: calc(24 / 20);
-  letter-spacing: 0.02em;
-  color: var(--main-text-color);
 }
 
 .portfolio-subtitle {
@@ -605,5 +592,191 @@ address {
   flex-grow: 0;
 }
 
-.team-box-container {
+/* MODAL WINDOW */
+
+.backdrop {
+  background: rgba(46, 47, 66, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  transition: opacity var(--transition-dur-and-func),
+    visibility var(--transition-dur-and-func);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  width: 408px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
+  padding-top: 72px;
+}
+
+.modal-close-btn {
+  position: absolute;
+  right: 24px;
+  top: 24px;
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: box-shadow var(--transition-dur-and-func);
+}
+
+.modal-close-btn:is(:focus, :hover) {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.contact-form {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.title-form {
+  width: 100%;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: calc(24px / 16px);
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 16px;
+}
+
+.contact-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 34px;
+}
+
+.contact-form-input:focus {
+  border: 1px solid #4d5ae5;
+  outline: none;
+}
+.contact-form-input:focus + .form-input-icon {
+  fill: #4d5ae5;
+}
+
+.contac-form-message {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  font-size: 12px;
+  line-height: calc(14px / 12px);
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-top: 8px;
+  padding-left: 16px;
+  margin-top: 4px;
+  margin-bottom: 16px;
+}
+.contac-form-message:focus {
+  border: 1px solid #4d5ae5;
+  outline: none;
+}
+
+.term-form-input {
+  width: 16px;
+  height: 16px;
+  border: 1.25px solid #2e2f42;
+  border-radius: 2px;
+}
+
+.contact-form-btn {
+  width: 170px;
+  height: 51px;
+  left: 635px;
+  top: 584px;
+  background-color: #4d5ae5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: calc(19px / 16px);
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  margin-top: 24px;
+}
+
+.contact-form-title {
+  width: 100%;
+  font-size: 12px;
+  line-height: calc(14px / 12px);
+  letter-spacing: 0.01em;
+  color: #8e8f99;
+}
+
+.terms-and-conditions {
+  font-size: 12px;
+  line-height: calc(16px / 12px);
+  letter-spacing: 0.04em;
+  color: #757575;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+}
+
+.privacy-policy {
+  font-size: 12px;
+  line-height: calc(16px / 12px);
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+}
+
+.contact-form-input-wrap {
+  width: 100%;
+  position: relative;
+  margin-bottom: 8px;
+  margin-top: 4px;
+}
+.form-input-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translate(0, -50%);
+  fill: #2e2f42;
+}
+
+.terms-and-conditions:before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  display: block;
+  border: 1.25px solid #2e2f42;
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 8px;
+}
+
+.term-form-input:checked + .terms-and-conditions::before {
+  background-color: #4d5ae5;
+  border: 1.25px solid #4d5ae5;
+  background-image: url(/images/check.png);
+  background-repeat: no-repeat;
+  display: flex;
+  background-position: center;
 }
